Add an option to skip compat modules (#7108)